# mc-server

./: .gitignore  Cargo.toml  README.md  generate_registries.sh  requirements.txt
demo/: Cargo.toml
demo/data/: README.txt  extract.py
demo/src/: main.rs
net/: Cargo.toml
net-derive/: Cargo.toml
net-derive/src/: deserialize.rs  lib.rs  serialize.rs
net/src/: chunk.rs  connection.rs  lib.rs  nbt.rs  registries.rs  server.rs
net/src/packets/: deserialize.rs  mod.rs  serialize.rs
net/src/packets/configuration/: clientbound.rs  serverbound.rs
net/src/packets/handshake/: serverbound.rs
net/src/packets/login/: clientbound.rs  serverbound.rs
net/src/packets/play/: clientbound.rs  serverbound.rs
net/src/packets/status/: clientbound.rs  serverbound.rs
src/: connection.rs  decode.rs  encode.rs  main.rs  nbt.rs  types.rs
