[package]
name = "mc-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
chrono = "0.4.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "net"] }
uuid = { version = "1.16.0", features = ["v4"] }

net = { path = "net" }

[workspace]
members = ["net"]
